--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>✨✨Entertainment Canteen✨✨</title>
-  <link rel="stylesheet" href="style2.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -18,9 +18,9 @@
 
   <div class="sidebar">
   <a href="#bienvenida">Bienvenida Al Servidor ✨✨</a>
-  <a href="#Disclaimer">Disclaimers</a>
-  <a href="#Temas_principales">Nuestros Temas principales</a>
-  <a href="#Motivos">¿Por que deberias unirte?</a>
+  <a href="#">Sección 1</a>
+  <a href="#">Sección 2</a>
+  <a href="#">Contacto</a>
   </div>
   <!-- CONTENIDO PRINCIPAL -->
   <main class="main-content">
@@ -43,7 +43,7 @@
           </ul>
     </section>
     <div class="card">
-        <h3 id="Disclaimer">Disclaimers (╬▔皿▔)╯</h3>
+        <h3>Disclaimers (╬▔皿▔)╯</h3>
         <p>
             Ya terminado la presentacion, aqui en este server, fue creado principalmente para crear una comunidad donde
             gente de todos lados se unan por intereses comunes
@@ -68,7 +68,7 @@
 
     <!-- SECCIÓN ENTRETENIMIENTO -->
     <section class="entreterimiento">
-      <h2 id="Temas_principales"  class="text-center">NUESTROS TEMAS PRICIPALES</h2>
+      <h2 class="text-center">NUESTROS TEMAS PRICIPALES</h2>
       <hr>
       <p>
             En esta comunidad hablaremos mayormente sobre estos temas, pero eso no quiere decir que solo hablaremos
@@ -122,7 +122,7 @@
 
     <!-- SECCIÓN CUESTIONES -->
     <section class="cuestiones">
-      <h2 id="Motivos"  class="text-center">¿POR QUE DEBERIAS UNIRTE?</h2>
+      <h2 class="text-center">¿POR QUE DEBERIAS UNIRTE?</h2>
 
       <p>
         Bueno, si a esto de lo que te e dicho anteriormente no te convence, intentare demostarte
