--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </div>
     <div class="text-center">
     </br>
-    <a href="/doc.html" class="btn" style="background-color: green;">Documentación De Nuestro Bot Codigo Abierto :)</a>
+    <a href="/web_comunity/doc.html" class="btn" style="background-color: green;">Documentación De Nuestro Bot Codigo Abierto :)</a>
     </div>
     
   </main>
